<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_imageView"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="30dp"
        app:cardPreventCornerOverlap="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/userProfile_ImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal|center_vertical"
            android:contentDescription="@string/default_profile_picture"
            android:scaleType="centerCrop"
            tools:background="@drawable/default_profile_pic" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/userName_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textColor="@android:color/black"
        android:textDirection="locale"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/userDesign_TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/cardView_imageView"
        app:layout_constraintTop_toTopOf="@+id/cardView_imageView"
        app:layout_constraintVertical_chainStyle="spread"
        tools:text="User Name" />

    <TextView
        android:id="@+id/userDesign_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textColor="@android:color/black"
        android:textDirection="locale"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/cardView_imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/cardView_imageView"
        app:layout_constraintTop_toBottomOf="@+id/userName_TextView"
        tools:text="User Designation" />

    <TextView
        android:id="@+id/postCreatedAt_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="start"
        android:singleLine="true"
        android:textColor="@android:color/black"
        android:textDirection="locale"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/userName_TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toEndOf="@+id/userName_TextView"
        app:layout_constraintTop_toTopOf="@+id/cardView_imageView"
        tools:text="5 hr" />

    <ImageView
        android:id="@+id/articleImage_ImageView"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_margin="10dp"
        android:background="@drawable/border_image_view"
        android:contentDescription="@string/article_content_image"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView_imageView"
        tools:src="@drawable/ic_launcher_background" />

    <TextView
        android:id="@+id/articleContent_TextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textColor="@android:color/black"
        android:textDirection="locale"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/articleImage_ImageView"
        tools:text="@string/Sample_Text_Article_Content" />

    <TextView
        android:id="@+id/articleTitle_TextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textColor="@android:color/black"
        android:textDirection="locale"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/articleContent_TextView"
        tools:text="@string/Sample_Text_Article_Title" />

    <TextView
        android:id="@+id/articleUrl_TextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textColor="@android:color/black"
        android:textDirection="locale"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/articleTitle_TextView"
        tools:text="@string/Sample_Text_Article_Url" />

    <TextView
        android:id="@+id/likes_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:textColor="@android:color/black"
        android:textDirection="locale"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/articleUrl_TextView"
        tools:text="4.5K Likes" />

    <TextView
        android:id="@+id/comment_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:textColor="@android:color/black"
        android:textDirection="locale"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/articleUrl_TextView"
        tools:text="30K Comments" />

    <View
        android:id="@+id/greyBar_View"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:background="#D5D5D5"
        app:layout_constraintEnd_toEndOf="@+id/comment_TextView"
        app:layout_constraintStart_toStartOf="@+id/likes_TextView"
        app:layout_constraintTop_toBottomOf="@+id/likes_TextView" />

</androidx.constraintlayout.widget.ConstraintLayout>